--- a/style.css
+++ b/style.css
@@ -1,18 +1,30 @@
-
+* {
+    box-sizing: border-box;
+}
 
 body {
     font-family: "Nerko One";
 }
+
+textarea:focus, input:focus{
+    outline: none;
+    background-color: rgb(245, 222, 179, .3);
+}
+
 .container {
     width: 90%;
     margin: 0 auto;
 }
 
 header {
-    background-color: #ffd684;
+    height: 25vh;
+    background-image: url(header.jpg);
+    background-position: center;
+    background-size: cover;
     display: flex;
     align-items: flex-end;
-    justify-content: space-evenly;
+    border-bottom: 5px solid #312c2ac7;
+
 }
 
 .logo {
@@ -28,13 +40,24 @@ header h1 {
     font-size: 30px;
     text-transform: uppercase;
     font-weight: 700;
+    color: white;
 }
 
 section {
     height: 80vh;
     background-image: url(background.jpg);
-    background-position: center;
+    background-position: top;
     background-size: cover;
+    background-attachment: fixed;
+}
+
+input {
+    border-radius: 30%;
+    background: none;
+    border: none;
+    border-bottom: 1px solid black;
+    line-height: 200%;
+    text-align: center;
 }
 
 .appDesc {
@@ -56,10 +79,52 @@ section {
 .shadow {
     width: 100%;
     height: 80vh;
-    background-color: rgb(255, 214, 132, .9);
+    background-color: rgb(255 255 255 / 90%);
+}
+
+.header-shadow {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 40%);
+    display: flex;
+    align-items: flex-end;
+    position: relative;
+}
+
+.header-shadow::after {
+    content: "";
+    width: 100%;
+    height: 5px;
+    position: absolute;
+    bottom: -5px;
+    background: linear-gradient(90deg, rgb(49 44 42 / 78%) 15%, rgb(153 99 18/ 78%) 100%);
 }
 
 .content {
     display: grid;
     grid-template-columns: 1fr 1fr;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    width: max-content;
+}
+
+button {
+    padding: 5px 10px;
+    border-radius: 50%;
+    border: 3px solid rgb(255, 181, 71, .8);
+    background-color: rgb(255, 181, 71);
+    font-family: "Nerko One";
+    opacity: .9;
+    transition-duration: .7s;
+    transition-timing-function: ease-in-out;
+}
+
+button:hover {
+    transform: scale(.9);
+    opacity: 1;
+    border-radius: 0;
 }
