--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ header {
     display: flex;
     align-items: flex-end;
     border-bottom: 5px solid #312c2ac7;
-
 }
 
 .logo {
@@ -52,12 +51,20 @@ section {
 }
 
 input {
+    width: 30%;
     border-radius: 30%;
     background: none;
     border: none;
     border-bottom: 1px solid black;
     line-height: 200%;
     text-align: center;
+}
+
+.inputs {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    
 }
 
 .appDesc {
@@ -127,4 +134,10 @@ button:hover {
     transform: scale(.9);
     opacity: 1;
     border-radius: 0;
+}
+
+.rotate {
+    transform: rotateX(360deg);
+    transition-duration: .6s;
+    transition-timing-function: linear;
 }
